--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "seed": "yarn prisma:seed"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@prisma/client": "5.19.1",
     "next": "16.0.4",
     "react": "19.2.0",
@@ -29,6 +30,7 @@
     "postcss": "^8.5.6",
     "prisma": "5.19.1",
     "tailwindcss": "^4.1.17",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5"
   }
